--- a/app/static/css/blog.css
+++ b/app/static/css/blog.css
@@ -1,20 +1,51 @@
 body{
      margin-top:75px;
-
 }
-
 footer{
     margin:10px;
 }
-
-h1 {
-    text-align: center;
-}
-
 a.user{
     color:white;
 }
-
+div.img{
+    float:left;
+    display: inline-block;
+    margin:20px;
+}
+p.user_description{
+    text-align: justify;
+}
+span#actor_heading{
+    text-align: center;
+    font-size: 45px;
+    height: 100%;
+    text-decoration: underline;
+}
+h1.page_h{
+    text-decoration: none;
+}
+.img-responsive {
+    display: block;
+    height: auto;
+    max-width: 100%;
+}
+.image_test{
+	border-radius:50%;
+}
+.contact  {
+    border-radius: 100px;
+}
+.c{
+    font-size: 34px;
+}
+.center{
+    text-align: center;
+    text-decoration: none;
+}
+h1 {
+    text-align: center;
+    text-decoration: none;
+}
 div.img{
     float:left;
     display: inline-block;
@@ -40,7 +71,8 @@ h1.page_h{
 }
 
 .image_test{
-	border-radius:50%;
+    border-radius:50%;
+    margin:auto;
 }
 
 .contact  {
@@ -48,10 +80,9 @@ h1.page_h{
 }
 
 .c{
-    font-size: 34px;
+    font-size: 24px;
 }
 
 .center{
-    text-align: center;
-    text-decoration: none;
+    margin:auto;
 }
