--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -54,9 +54,19 @@
                     <button type="submit" class="btn btn-success"> Submit </button>
                 </form>
           </nav>
-
   </header>
-  <div class="container" style=" border:2px solid red;">
+
+  <div class="container" style=" border:2px solid red;margin-top:50px;">
+    {% with messages = get_flashed_messages() %}
+        {% if messages%}
+            {% for message in messages%}
+                <div class="alert alert-warning alert-dismissible" role="alert">
+                  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="True">&times;</span></button>
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
 {% block content %}
         <div class="jumbotron">
             <h1>Note-it App</h1>
