--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -31,7 +31,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
               </button>
-              <a href="{{url_for('contact')}}" class="navbar-brand">Note-it</a>
+              <a href="{{url_for('index')}}" class="navbar-brand">Note-it</a>
           </div>
           <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
               <ul class="nav navbar-nav">
@@ -76,11 +76,12 @@
         </div>
 
 {% endblock %}
+    </div>
         <footer class="footer">
             <p>&copy; Company 2016</p>
         </footer>
 
-    </div>
+
 
 </body>
 
