--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -56,7 +56,7 @@
           </nav>
   </header>
 
-  <div class="container" style=" border:2px solid red;margin-top:50px;">
+  <div class="container" style=" border:2px solid red;">
     {% with messages = get_flashed_messages() %}
         {% if messages%}
             {% for message in messages%}
